--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Earth Vengeance, massively multiplayer online dual arena",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Error: no test specified.... add something to package.json\" && exit 1\"",
-    "start": "node index.js"
+    "test": "mocha test",
+    "start": "node index.js",
+    "debug": "DEBUG=express* node index.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,14 @@
   "author": "Darren Marshall",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.16.6"
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
+    "lodash": "^4.16.6",
+    "moment": "^2.16.0",
+    "node-stringify": "0.0.19",
+    "socket.io": "^1.5.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
   }
 }
